--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.2",
+    "@graphql-tools/load-files": "^7.0.0",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6"
   },
